--- a/generic_charting_client/src/main/webapp/module_chart_editor.html
+++ b/generic_charting_client/src/main/webapp/module_chart_editor.html
@@ -136,14 +136,21 @@
                                         <div class="panel-body">
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Data</label>
-                                                <div class="col-sm-8">
+                                                <div class="col-sm-7">
                                                     <div id="dvImportSegments" class="fileupload ">
                                                         <input type="file" name="File Upload" id="txtFileUpload" accept=".csv .tsv" />
                                                     </div>
                                                 </div>
-                                                <div class="col-sm-2">
+                                                <div class="col-sm-3">
                                                     <button onclick="ModalUtil.popup_modal('View', '/assets/self-owned/html/chart/modal/modal_content_view_data.html', null, null, null);" title="view data" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
                                                     <button onclick="use_data()" title="view data" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-check"></i></button>
+                                                </div>
+                                            </div>
+                                            
+                                            <div class="form-group">
+                                                <label class="col-sm-2 control-label">DataSource</label>
+                                                <div class="col-sm-10">
+                                                    <button onclick="ModalUtil.popup_modal('Choose DataSource','/assets/self-owned/html/datasource/modal_choose_data_source.html',null,null,null);" title="choose dataSource" type="button" class="btn btn-default btn-xs" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-check"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -269,7 +276,7 @@
     <script src="assets/self-owned/js/generic/generic_cud.js"></script>
     <script src="assets/self-owned/js/generic/generic_modal.js"></script>
     <script src="assets/self-owned/js/generic/generic_query.js"></script>
-    <script src="assets/self-owned/js/generic/generic_table.js"></script>
+    <script src="assets/self-owned/js/generic/generic_table_1.js"></script>
     <script src="assets/self-owned/js/generic/generic_util.js"></script>
     <script src="assets/self-owned/js/generic/generic_validation.js"></script>
     <script src="assets/self-owned/js/generic/generic_workbench.js"></script>
